test/testdata/variables/undeclared_access_error_global_defined_after_access.lox
// error: x has been used before its declaration
// lint error: x has been used before its declaration
x = 1;
var x;
